smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/newline-after-shape.smithy
// Parse error at line 4, column 17 near `string`: Expected a line break | Model
namespace com.test

string MyString string OtherString
